Search bar implemented.

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2,6 +2,9 @@
     "LAST_ACCESS": "Last access:",
     "ACCESS_FINGERPRINT_AUTHENTICATION": "Access with fingerprint",
     "ALL": "All",
+    "SEARCH_MOVEMENT": "Search movement",
+    "SEARCH_SPENT": "Search spent",
+    "SEARCH_DEPOSIT": "Search deposit",
     "EXPENSES": "Expenses",
     "DEPOSITS": "Deposits",
     "BALANCE": "Balance",
