--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -2,6 +2,9 @@
     "LAST_ACCESS": "Último acceso:",
     "ACCESS_FINGERPRINT_AUTHENTICATION": "Acceder con huella",
     "ALL": "Todos",
+    "SEARCH_MOVEMENT": "Buscar movimiento",
+    "SEARCH_SPENT": "Buscar gasto",
+    "SEARCH_DEPOSIT": "Buscar depósito",
     "EXPENSES": "Gastos",
     "DEPOSITS": "Depósitos",
     "BALANCE": "Saldo",
